# node-merk

./: package-lock.json  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
